--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # --- Spring Datasource ---
 spring.datasource.url=jdbc:postgresql://localhost:5432/hrm
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=manasa15
 spring.datasource.driver-class-name=org.postgresql.Driver
 # --- JPA ---
 spring.jpa.hibernate.ddl-auto=none
@@ -10,21 +10,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
-
 # --- JWT ---
 app.jwt.private-key-path=classpath:keys/private_key.pem
 app.jwt.public-key-path=classpath:keys/public_key.pem
 app.jwt.expiration=1200000
 app.jwt.refresh-expiration=86400000
-
 # --- Logging ---
 logging.level.root=INFO
 logging.level.org.springframework.security=WARN
-
-
-
-
-
 # --- CORS (optional) ---
 app.cors.allowed-origins=http://localhost:3000,http://your-prod-domain.com
 # --- Actuator ---
