--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,10 @@ spring.jpa.open-in-view=false
 # --- JWT ---
 app.jwt.private-key-path=classpath:keys/private_key.pem
 app.jwt.public-key-path=classpath:keys/public_key.pem
-app.jwt.expiration=1200000
-app.jwt.refresh-expiration=86400000
+# Access token expiration (in milliseconds): 30 minutes = 30 * 60 * 1000 = 1800000
+app.jwt.expiration=1800000
+# Refresh token expiration (in milliseconds): 6 days = 6 * 24 * 60 * 60 * 1000 = 518400000
+app.jwt.refresh-expiration=518400000
 # --- Logging ---
 logging.level.root=INFO
 logging.level.org.springframework.security=WARN
